--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <!-- Features -->
     <div class="container py-5">
         <h2 class="fw-bold text-center text-primary my-5">Key Features</h2>
-        <div class="row">
+        <div class="row g-5">
             <div class="col-lg-4">
                 <div class="card py-3 px-4 shadow-sm">
                     <ion-icon class="ioncon" name="bulb-outline"></ion-icon></ion-icon>
